style: Fix hero node overflow on mobile

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -78,6 +78,13 @@
   .VPHero .image {
     margin-top: 40px !important;
     padding-top: 0 !important;
+    max-width: 100% !important;
+    overflow: hidden !important;
+  }
+
+  .VPHero .image .node {
+    width: calc(100vw - 48px) !important;
+    max-width: 380px !important;
   }
 }
 
